# vario

./: .gitignore  pyproject.toml  setup.cfg
accounts/: views.py
accounts/migrations/: 0001_initial.py
categories/: admin.py  models.py  urls.py  views.py
categories/fixtures/: category_defaults.yaml
categories/migrations/: 0001_initial.py
categories/templates/categories/: category_list.html
category/: models.py
common/: models.py
common/templates/form_templates/: bootstrap_form.html
common/templatetags/: common_filters.py
core/: asgi.py  info.txt  settings.py  urls.py  views.py  wsgi.py
environments/: admin.py  models.py
environments/migrations/: 0001_initial.py  0002_environment_created_at_environment_updated_at.py
feature_flags/: admin.py  forms.py  models.py  urls.py  views.py
feature_flags/migrations/: 0001_initial.py  0002_alter_featureflag_name.py  0003_alter_featureflag_description_alter_featureflag_name_and_more.py
feature_flags/templates/feature_flags/: featureflag_form.html
projects/: admin.py  forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_featureflag_category_featureflag_created_at_and_more.py  0002_project_description_alter_project_name.py  0003_alter_project_description_alter_project_name.py
projects/templates/projects/: bootstrap_form.html  project_detail.html  project_form.html  project_list.html  projects_detail.html  projects_list.html
static/: app.css
static/js/: utilities.mjs
static/js/projects/: projects_detail.mjs
templates/: 404.html  base.html  form_errors.html  index.html  navbar.html
templates/includes/: foo.html  form_modal.html
toggles/: admin.py  apps.py  models.py  urls.py  views.py
toggles/migrations/: 0001_initial.py
