[tool.poetry]
name = "vario"
version = "0.1.0"
description = ""
authors = ["suhail-n <suhail.nooristani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
