[tool.poetry]
name = "vario"
version = "0.1.0"
description = ""
authors = ["suhail-n <suhail.nooristani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# view defaults here https://docs.astral.sh/ruff/configuration/
# python 3.12.0
target-version = "py312"

extend-exclude = [
    "**/tests.py",
    "**/migrations",
]

[tool.ruff.lint]
extend-select = [
    "DJ",  # django lint
    "I",  # isort
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = false
lines-after-imports = 2
known-first-party = []
known-local-folder = []
known-third-party = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]