[tool.poetry]
name = "vario"
version = "0.1.0"
description = ""
authors = ["suhail-n <suhail.nooristani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-stubs-ext = "^5.0.4"
django-stubs = "^5.0.4"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
ruff = "^0.5.6"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# view defaults here https://docs.astral.sh/ruff/configuration/
# python 3.12.0
target-version = "py312"

extend-exclude = [
    "**/tests.py",
    "**/migrations",
]

[tool.ruff.lint]
extend-select = [
    "DJ",  # django lint
    "I",  # isort
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = false
lines-after-imports = 2
known-first-party = []
known-local-folder = []
known-third-party = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.mypy]
python_version = "3.12"
# imports related
ignore_missing_imports = true
follow_imports = "silent"
# None and Optional handling
no_implicit_optional = true
strict_optional = true
# Configuring warnings
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_return_any = true
# Untyped definitions and calls
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = false
# Disallow dynamic typing
disallow_subclassing_any = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = true
# Configuring error messages
show_error_context = false
show_column_numbers = false
show_error_codes = true
enable-incomplete-feature = true
# strict config

# check_untyped_defs = true
# disallow_any_generics = true
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
# ignore_errors = false
# ignore_missing_imports = true
# implicit_reexport = false
# strict_optional = true
# strict_equality = true
# no_implicit_optional = true
# warn_unused_ignores = true
# warn_redundant_casts = true
# warn_unused_configs = true
# warn_unreachable = true
# warn_no_return = true


exclude = ["docs", "**/tests.py", "**/migrations"]

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"
